# asimplevectors

./: .env.local  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  build.sh  docker-compose.yml  dockerbuild.sh  install_dependency.sh  kill_cluster.sh  run_cluster.sh  run_example.sh  run_standalone.sh  run_test.sh  test.sh  test_space.sh  test_vector.sh  test_version.sh
example/: requirements.txt  test_base.sh  test_error.sh  test_keys.py  test_rerank.py  test_search.py  test_security.py  test_security.sh  test_sift1m.py  test_snapshot.sh  test_snapshot2.sh  test_space.py  test_vector.py
src/: config.rs  main.rs
src/atinyvectors/: atinyvectors_bo.rs  atinyvectors_raft_command.rs  idcache.rs  mod.rs  rbac_token.rs  rerank.rs  search.rs  snapshot.rs  space.rs  vector.rs  version.rs
src/raft_atinyvectors/: app.rs  atinyvectors.rs  atinyvectors_bo.rs  atinyvectors_raft_command.rs  client.rs  mod.rs  network.rs  store.rs
src/raft_atinyvectors/network/: api.rs  management.rs  raft.rs  raft_network_impl.rs
src/raft_cluster/: app.rs  client.rs  mod.rs  network.rs  store.rs
src/raft_cluster/network/: management.rs  raft.rs  raft_network_impl.rs
src/service/: mod.rs  routes.rs
src/service/handlers/: kvstorage_handler.rs  mod.rs  rerank_handler.rs  search_handler.rs  security_handler.rs  snapshot_handler.rs  space_handler.rs  vector_handler.rs  version_handler.rs
src/service/handlers/dto/: keyvalue_dto.rs  mod.rs  rerank_dto.rs  search_dto.rs  security_dto.rs  snapshot_dto.rs  space_dto.rs  vector_dto.rs  version_dto.rs
src/tests/: config_test.rs  mod.rs
tests/: requirements.txt  test_base.sh  test_error.sh  test_search.py  test_security.py  test_sift1m.py  test_snapshot.sh  test_space.py  test_vector.py  test_version.py
