[package]
name = "asimplevectors"
version = "0.2.0"
edition = "2021"

[dependencies]
openraft = { git = "https://github.com/datafuselabs/openraft.git", features = ["serde", "type-alias"] }
async-std = "*"

# openraft uses async-io, therefore we can not use tokio directly. it just workaround patch for dependency error
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
futures = "0.3.30"
byteorder = "1.4.3"
clap = { version = "4.5.17", features = ["derive", "env"] }
reqwest = { version = "0.12.5", features = ["json"] }
rocksdb = "0.22.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tide = { version = "0.17.0-beta.1" }
utoipa = { git = "https://github.com/juhaku/utoipa", tag = "utoipa-5.0.0-beta.0" }
utoipa-swagger-ui = { git = "https://github.com/juhaku/utoipa", package = "utoipa-swagger-ui", tag = "utoipa-5.0.0-beta.0" }

multer = "3.1.0"

# for toy-rpc, use `serde_json` instead of the default `serde_bincode`:
# bincode which enabled by default by toy-rpc, does not support `#[serde(flatten)]`: https://docs.rs/bincode/2.0.0-alpha.1/bincode/serde/index.html#known-issues
toy-rpc = { version = "0.10.0", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-appender = "0.2"

anyhow = "1.0"

# for atinyvectors
libc = "0.2"
dotenv = "0.15.0"

once_cell = "1.19.0"
chrono = "0.4.38"
regex = "1.10.6"



[dev-dependencies]
maplit = "1.0.2"
tempfile = { version = "3.4.0" }

# for atinyvectors
cc = "1.0"
